@@ -1,3 +1,7 @@
+Sun May 25 22:42:27 2014  Tanaka Akira  <akr@fsij.org>
+
+	* test/lib/minitest/unit.rb: Check tempfile leak for each test class.
+
 Sun May 25 20:31:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (ac_cv_func_{getcontext,setcontext}): do not
